# my_amaranth_modules

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
my_amaranth_modules/: AXI4.py  Algorithms.py  Stream.py  StreamCompaction.py  fhdl.py  utils.py
